--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,18 @@
     "idf.customExtraVars": "{\"OPENOCD_SCRIPTS\":\"C:\\\\Users\\\\jwolf\\\\.espressif\\\\tools\\\\openocd-esp32\\\\v0.10.0-esp32-20200709/openocd-esp32/share/openocd/scripts\",\"IDF_CCACHE_ENABLE\":\"1\"}",
     "idf.espIdfPathWin": "C:\\Users\\jwolf\\esp\\esp-idf",
     "idf.portWin": "COM4",
-    "idf.pythonBinPathWin": "C:\\Users\\jwolf\\.espressif\\python_env\\idf4.2_py3.9_env\\Scripts\\python.exe"
+    "idf.pythonBinPathWin": "C:\\Users\\jwolf\\.espressif\\python_env\\idf4.2_py3.9_env\\Scripts\\python.exe",
+    "files.associations": {
+        "event_groups.h": "c",
+        "wifi_sta.h": "c",
+        "wifi_sap.h": "c",
+        "esp_wifi.h": "c",
+        "utility.h": "c",
+        "sdkconfig.h": "c",
+        "esp_spi_flash.h": "c",
+        "sys.h": "c",
+        "err.h": "c",
+        "nvs_flash.h": "c"
+    },
+    "idf.flashType": "UART"
 }
