--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "components/esp32-utility"]
 	path = components/esp32-utility
 	url = git@github.com:wolffshots/esp32-utility.git
+[submodule "components/esp32-gpio"]
+	path = components/esp32-gpio
+	url = git@github.com:wolffshots/esp32-gpio.git
