--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "components/esp32-ds18b20-fork"]
 	path = components/esp32-ds18b20
 	url = ../esp32-ds18b20.git
+[submodule "components/esp32-timer"]
+	path = components/esp32-timer
+	url = git@github.com:wolffshots/esp32-timer.git
