edited gitmodules to reflect owb fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "components/esp32-owb"]
-	path = components/esp32-owb
-	url = git@github.com:DavidAntliff/esp32-owb.git
 [submodule "components/esp32-wifi"]
 	path = components/esp32-wifi
 	url = ../esp32-wifi.git
@@ -16,3 +13,5 @@
 [submodule "components/esp32-timer"]
 	path = components/esp32-timer
 	url = ../esp32-timer.git
+[submodule "components/esp32-owb"]
+	url = ../esp32-owb.git
