--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # Build and deploy doxygen documention to GitHub Pages
-sudo: false
+sudo: true
 dist: hirsute
 
 # Blacklist
@@ -13,14 +13,17 @@ env:
     - GH_REPO_REF: github.com/wolffshots/esp32-warm-water.git
 
 # Install dependencies
-addons:
-  apt:
-    packages:
-      - doxygen
-      - doxygen-doc
-      - doxygen-latex
-      - doxygen-gui
-      - graphviz
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
+# addons:
+#   apt:
+#     packages:
+#       - doxygen
+#       - doxygen-doc
+#       - doxygen-latex
+#       - doxygen-gui
+#       - graphviz
 
 # Build the docs
 script:
