--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 script:
   - cd doc
   - doxygen
+  - doxygen -v
 
 # Deploy using Travis-CI/GitHub Pages integration support
 deploy:
