added ubuntu version command for debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 script:
   - cd doc
   - doxygen
+  - lsb_release -a
   - doxygen -v
 
 # Deploy using Travis-CI/GitHub Pages integration support
