added commands to install specific version

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,11 @@ env:
 # Install dependencies
 before_install:
   - sudo apt-get update
-  - sudo apt-get -y install doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
+  - sudo apt-get -y install graphviz
+  - wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz
+  - cd doxygen-1.9.1/
+  - make install
+  
 # addons:
 #   apt:
 #     packages:
