--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Build and deploy doxygen documention to GitHub Pages
 sudo: false
-dist: hirsute
+dist: focal
 
 # Blacklist
 branches:
@@ -19,7 +19,7 @@ before_install:
   - wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz
   - cd doxygen-1.9.1/
   - make install
-  
+
 # addons:
 #   apt:
 #     packages:
