--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 # Install dependencies
 before_install:
   - sudo apt-get update
-  - sudo apt-get -y install graphviz libclang-9-dev
+  - sudo apt-get -y install graphviz libclang-common-9-dev libclang1-9 libllvm9
   - wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz
   - cd doxygen-1.9.1/
   - sudo make install
