--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,57 @@ env:
   global:
     - GH_REPO_REF: github.com/wolffshots/esp32-warm-water.git
 
-# Install dependencies
-before_install:
-  - sudo apt-get update
-  - sudo apt install -y graphviz
-  - sudo apt install -y libclang1-9 libclang1-9 libllvm9
-  - sudo apt install -y libclang-cpp9
-  - wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz
-  - cd doxygen-1.9.1/
-  - sudo make install
-  - cd ..
-  - rm -fr doxygen-1.9.1 # crucial so it doesn't document itself
-
-# Build the docs
-script:
-  - cd doc
-  - doxygen
+jobs:
+  include:
+    - stage: "Docs"
+      # Install doc dependencies
+      before_install:
+        - sudo apt-get update
+        - sudo apt install -y graphviz
+        - sudo apt install -y libclang1-9 libclang1-9 libllvm9
+        - sudo apt install -y libclang-cpp9
+        - wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz
+        - cd doxygen-1.9.1/
+        - sudo make install
+        - cd ..
+        - rm -fr doxygen-1.9.1 # crucial so it doesn't document itself
+      # Build the docs
+      script:
+        - cd doc
+        - doxygen
+    - stage: "Build"
+      # Install build dependencies
+      addons:
+        apt:
+          packages:
+          - git
+          - wget
+          - flex
+          - bison
+          - gperf
+          - python3
+          - python3-pip
+          - python3-setuptools
+          - python-is-python3
+          - cmake
+          - ninja-build
+          - ccache
+          - libffi-dev
+          - libssl-dev
+      install:
+        - mkdir ~/esp
+        - cd ~/esp
+        - git clone -b v4.1 --recursive https://github.com/espressif/esp-idf.git
+        - cd ~/esp/esp-idf
+        - ./install.sh
+        - . ~/esp/esp-idf/export.sh
+      script:
+        - cd build/example
+        - idf.py reconfigure
+        - idf.py app
+      after_success:
+        - cd build/example
+        - idf.py size
 
 # Deploy using Travis-CI/GitHub Pages integration support
 deploy:
