--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "components/esp32-owb"]
 	path = components/esp32-owb
 	url = ../esp32-owb.git
+[submodule "components/esp32-ssd1306"]
+	path = components/esp32-ssd1306
+	url = ../esp32-ssd1306.git
