--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -70,11 +70,18 @@ jobs:
     - name: Build esp-idf Code - install dependencies
       run: sudo apt-get install git wget flex bison gperf python3 python3-pip python3-setuptools python-is-python3 cmake ninja-build ccache libffi-dev libssl-dev
     - name: Build esp-idf Code - install esp
-      run: mkdir esp && cd esp && git clone -b v4.2.1 --recursive https://github.com/espressif/esp-idf.git && cd esp-idf && ./install.sh > /dev/null
+      run:  mkdir esp && cd esp
+            git clone -b v4.2.1 --recursive https://github.com/espressif/esp-idf.git
+            cd esp-idf
+            ./install.sh > /dev/null
     - name: Build esp-idf Code - build warm-water
-      run: . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh && idf.py reconfigure && idf.py app
+      run:  . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh
+            ls
+            idf.py reconfigure
+            idf.py app
     - name: Build esp-idf Code - after success
-      run: . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh && idf.py size
+      run:  . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh
+            idf.py size
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
