--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -78,7 +78,7 @@ jobs:
       run:  . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh &&
             ls &&
             idf.py reconfigure &&
-            idf.py app &&
+            idf.py app
     - name: Build esp-idf Code - after success
       run:  . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh &&
             idf.py size
