--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -70,13 +70,15 @@ jobs:
     - name: Build esp-idf Code - install dependencies
       run: sudo apt-get install git wget flex bison gperf python3 python3-pip python3-setuptools python-is-python3 cmake ninja-build ccache libffi-dev libssl-dev
     - name: Build esp-idf Code - install esp
-      run:  mkdir esp && cd esp &&
+      run:  cd /home/runner/work/esp32-warm-water/ &&
+            mkdir esp && 
+            cd esp &&
             git clone -b v4.2.1 --recursive https://github.com/espressif/esp-idf.git &&
             cd esp-idf &&
             ./install.sh > /dev/null
     - name: Build esp-idf Code - build warm-water
-      run:  . /home/runner/work/esp32-warm-water/esp32-warm-water/esp/esp-idf/export.sh &&
-            cd /home/runner/work/esp32-warm-water/ &&
+      run:  . /home/runner/work/esp32-warm-water/esp/esp-idf/export.sh &&
+            cd /home/runner/work/esp32-warm-water/esp32-warm-water/ &&
             ls &&
             idf.py reconfigure &&
             idf.py app
