--- a/.travis.yml
+++ b/.travis.yml
@@ -38,38 +38,38 @@ jobs:
         on:
           branch: main
         target-branch: gh-pages
-    - stage: "Build"
-      # Install build dependencies
-      addons:
-        apt:
-          packages:
-          - git
-          - wget
-          - flex
-          - bison
-          - gperf
-          - python3
-          - python3-pip
-          - python3-setuptools
-          - python-is-python3
-          - cmake
-          - ninja-build
-          - ccache
-          - libffi-dev
-          - libssl-dev
-      install:
-        - mkdir ~/esp
-        - cd ~/esp
-        - git clone -b v4.2.1 --recursive https://github.com/espressif/esp-idf.git
-        - cd ~/esp/esp-idf
-        - ./install.sh
-        - . ~/esp/esp-idf/export.sh
-      script:
-        - cd $TRAVIS_BUILD_DIR
-        - idf.py reconfigure
-        - idf.py app
-      after_success:
-        - cd $TRAVIS_BUILD_DIR
-        - idf.py size
+    # - stage: "Build"
+    #   # Install build dependencies
+    #   addons:
+    #     apt:
+    #       packages:
+    #       - git
+    #       - wget
+    #       - flex
+    #       - bison
+    #       - gperf
+    #       - python3
+    #       - python3-pip
+    #       - python3-setuptools
+    #       - python-is-python3
+    #       - cmake
+    #       - ninja-build
+    #       - ccache
+    #       - libffi-dev
+    #       - libssl-dev
+    #   install:
+    #     - mkdir ~/esp
+    #     - cd ~/esp
+    #     - git clone -b v4.2.1 --recursive https://github.com/espressif/esp-idf.git
+    #     - cd ~/esp/esp-idf
+    #     - ./install.sh
+    #     - . ~/esp/esp-idf/export.sh
+    #   script:
+    #     - cd $TRAVIS_BUILD_DIR
+    #     - idf.py reconfigure
+    #     - idf.py app
+    #   after_success:
+    #     - cd $TRAVIS_BUILD_DIR
+    #     - idf.py size
 
 
