--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = ../esp32-ssd1306.git
 [submodule "components/esp32-spiffs"]
 	path = components/esp32-spiffs
-	url = git@github.com:wolffshots/esp32-spiffs.git
+	url = ../esp32-spiffs.git
