changed references from `/front` to `/front/build`

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS "."
                     INCLUDE_DIRS "." "include"
-                    EMBED_FILES "../front/favicon.ico" "../front/index.html")
+                    EMBED_FILES "../front/build/favicon.ico" "../front/build/index.html")
