--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 3.5)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(warm_water)
 
-# Create a SPIFFS image from the contents of the 'front' directory
+# Create a SPIFFS image from the contents of the 'front/build' directory
 # that fits the partition named 'storage'. FLASH_IN_PROJECT indicates that
 # the generated image should be flashed when the entire project is flashed to
 # the target with 'idf.py -p PORT flash'.
-spiffs_create_partition_image(storage front FLASH_IN_PROJECT)
+spiffs_create_partition_image(storage front/build FLASH_IN_PROJECT)
