added webserver placeholder

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "front"]
 	path = front
 	url = ../esp32-warm-water-frontend.git
+[submodule "components/esp32-webserver"]
+	path = components/esp32-webserver
+	url = git@github.com:wolffshots/esp32-webserver.git
