--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -31,4 +31,8 @@ jobs:
     - name: build docs
       run:  cd doc
             doxygen
-#     - name: deploy docs to pages
+    - name: deploy docs to gh pages 🚀
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages # The branch the action should deploy to.
+        folder: doc # The folder the action should deploy.
