--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 jobs:
   analyze:
-    name: Analyze
+    name: build docs
     runs-on: ubuntu-latest
     permissions:
       actions: read
@@ -29,7 +29,7 @@ jobs:
             cd .. &&
             rm -fr doxygen-1.9.1 # crucial so it doesn't document itself
     - name: build docs
-      run:  cd doc
+      run:  cd doc &&
             doxygen
     - name: deploy docs to gh pages 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.4
