--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -36,3 +36,4 @@ jobs:
       with:
         branch: gh-pages # The branch the action should deploy to.
         folder: doc # The folder the action should deploy.
+        ssh-key: ${{ secrets.DEPLOY_KEY }}
