--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -4,36 +4,31 @@ on:
   push:
     branches: [ main ]
 jobs:
-  analyze:
-    name: build docs
+  docs-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-       
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        submodules: 'recursive'
-
-    - name: get specific doxygen
-      run:  sudo apt-get update && 
-            sudo apt install -y graphviz &&
-            sudo apt install -y libclang1-9 libclang1-9 libllvm9 &&
-            sudo apt install -y libclang-cpp9 &&
-            wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz &&
-            cd doxygen-1.9.1/ &&
-            sudo make install &&
-            cd .. &&
-            rm -fr doxygen-1.9.1 # crucial so it doesn't document itself
-    - name: build docs
-      run:  cd doc &&
-            doxygen
-    - name: deploy docs to gh pages 🚀
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-        branch: gh-pages # The branch the action should deploy to.
-        folder: doc # The folder the action should deploy.
-        ssh-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Checkout repository
+        uses: actions/checkout@v2.3.1
+        with:
+          submodules: 'recursive'
+      - name: get specific doxygen
+        run:  sudo apt-get update && 
+              sudo apt install -y graphviz &&
+              sudo apt install -y libclang1-9 libclang1-9 libllvm9 &&
+              sudo apt install -y libclang-cpp9 &&
+              wget -c https://doxygen.nl/files/doxygen-1.9.1.linux.bin.tar.gz -O - | tar -xz &&
+              cd doxygen-1.9.1/ &&
+              sudo make install &&
+              cd .. &&
+              rm -fr doxygen-1.9.1 # crucial so it doesn't document itself
+      - name: build docs
+        run:  cd doc &&
+              doxygen &&
+              ll &&
+              cd ..
+      - name: deploy docs to gh pages 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: doc # The folder the action should deploy.
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
