--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -30,5 +30,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: doc # The folder the action should deploy.
+          folder: doc/html # The folder the action should deploy.
           ssh-key: ${{ secrets.DEPLOY_KEY }}
