--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ project(warm_water)
 # that fits the partition named 'storage'. FLASH_IN_PROJECT indicates that
 # the generated image should be flashed when the entire project is flashed to
 # the target with 'idf.py -p PORT flash'.
-spiffs_create_partition_image(storage front/build FLASH_IN_PROJECT)
+# spiffs_create_partition_image(storage front/build FLASH_IN_PROJECT)
