--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -48,9 +48,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2.3.4
       with:
         submodules: 'recursive'
+        ssh-key: ${{ secrets.CHECKOUT_KEY }}
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
