--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v2.3.4
         with:
           submodules: 'recursive'
+          ssh-key: ${{ secrets.CHECKOUT_KEY }}
       - name: get specific doxygen
         run:  sudo apt-get update && 
               sudo apt install -y graphviz &&
