--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -80,7 +80,7 @@ jobs:
     #   make release
     
     - name: Build esp-idf Code - install dependencies
-      run: sudo apt-get install git wget flex bison gperf python3 python3-pip python3-setuptools python-is-python3 cmake ninja-build ccache libffi-dev libssl-dev
+      run: sudo apt-get install git wget flex bison gperf python3 python3-pip python3-setuptools python-is-python3 cmake ninja-build ccache libffi-dev libssl-dev npm
     - name: Build esp-idf Code - install esp
       run:  cd /home/runner/work/esp32-warm-water/ &&
             mkdir esp && 
@@ -91,7 +91,7 @@ jobs:
     - name: Build esp-idf Code - build warm-water
       run:  . /home/runner/work/esp32-warm-water/esp/esp-idf/export.sh &&
             cd /home/runner/work/esp32-warm-water/esp32-warm-water/ &&
-            ls &&
+            cd front && npm install && npm build && cd .. &&
             idf.py reconfigure &&
             idf.py app
     - name: Build esp-idf Code - after success
